# hydrosheds-cpp-api

./: .gitignore  .readthedocs.yml  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
Proposal/: interface.hh
app/: CMakeLists.txt  hydrosheds-cpp-api_app.cpp  hydrosheds_app  hydrosheds_app.cc  rasterize_app.cc
doc/: CMakeLists.txt  conf.py  environment-rtd.yml  index.rst
include/: doc_config
include/hydrosheds/: hydrosheds.hh  rasterize.hh
include/hydrosheds-cpp-api/: hydrosheds-cpp-api.hpp
src/: CMakeLists.txt  hydrosheds-cpp-api.cpp  hydrosheds.cc  rasterize.cc
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  hydrosheds-cpp-api_t.cpp  hydrosheds_t.cc  tests.cc
tests/Testing/Temporary/: CTestCostData.txt
tests/app/: Makefile  cmake_install.cmake  hydrosheds_app
tests/doc/: CTestTestfile.cmake  Doxyfile.doxygen  Makefile  cmake_install.cmake
tests/ext/Catch2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/src/: Makefile  cmake_install.cmake
tests/test_data/: README.md
tests/test_data/HydroRIVERS_v10_gr.gdb/HydroRIVERS_v10_gr.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000005.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000009.gdbtablx
tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tests  tests_include-b12d07c.cmake  tests_tests-b12d07c.cmake
tests/tests/Testing/Temporary/: CTestCostData.txt
